Fixed profile image (now visible). Added additional styling

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-:root{
+:root {
     --primary-color: #ff7613;
     --text-color: #727171;
 }
@@ -15,5 +15,13 @@ html {
 body {
     font-family: Inter, sans-serif;
     background-color: black;
+    color: white;
+}
+/* common styles */
+img {
+    width: 100%
+}
+a {
+    text-decoration: none;
     color: white;
 }
